--- a/src/scss/pages/_account-page.scss
+++ b/src/scss/pages/_account-page.scss
@@ -51,20 +51,22 @@ body {
                         @include toggle-font;
                         font-size: 1.2em;
                         margin: 1em 0;
+                        width: 80%;
                     }
                     span {
                         float: right;
                         margin: 1.5em 1em;
                         border: none;
                         img {
-                            margin: 1.5em 0 0 3.5em;
+                            margin-top: 2em;
+                            background-color: transparent;
                         }
                     }
                     h4 {
                         font-size: 1.8em;
                         font-family: $text-font;
                         color: $cash-green;
-                        margin: 0 0 1em 0;
+                        margin: 0 5em 1em 0;
                     }
                 }
             }
